2004-08-30  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnome-settings-multimedia-keys.c: applied patch from Pierre Ossman
	<drzeus-bugzilla@drzeus.cx> to display the volume dialog in the
	correct place. Fixes #144490

2004-08-22  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* actions/acme-fb-level.c: Use the parent type in the G_DEFINE_TYPE
	macro, not its own type (fixes rh #130473).

2004-07-16  Bastien Nocera  <hadess@hadess.net>

	* actions/acme-volume-alsa.c: (acme_volume_alsa_finalize),
	(acme_volume_alsa_close_real), (acme_volume_alsa_open),
	(acme_volume_alsa_init): fix a crash when there aren't any ALSA mixers
	(or soundcards) present on the system

2004-07-15  Bastien Nocera  <hadess@hadess.net>

	* actions/acme-volume-oss.c: fix OSS compilation on NetBSD

2004-07-15  Bastien Nocera  <hadess@hadess.net>

	* actions/acme-volume-alsa.c: (acme_volume_alsa_finalize),
	(acme_volume_alsa_set_mute), (acme_volume_alsa_get_mute),
	(acme_volume_alsa_get_volume), (acme_volume_alsa_set_volume),
	(acme_volume_alsa_close_real), (acme_volume_alsa_open),
	(acme_volume_alsa_close), (acme_volume_alsa_init):
	rework the ALSA mixer so that:
	- the ALSA device isn't kept open at all times, only for 4 seconds
	  after the last use (Closes: #141793)
	- the hardware mute is used if it is available
	  (Closes: #141404, #144489, #140937)
	- lowering the volume doesn't move the balance to the right
	- it doesn't leak alsa-lib mixers all around

2004-06-18  Crispin Flowerday  <gnome@flowerday.cx>

	* gnome-settings-xsettings.c: Translate the menus_have_icons
	gconf key to the MenuImages xsetting (Closes bug #144201)

2004-06-18  Bastien Nocera  <hadess@hadess.net>

	* actions/acme-volume.c: make AcmeVolume descend of a GObject, not
	itself (spotted by Mariano Suárez-Alvarez <mariano@gnome.org>)

2004-06-15  Bastien Nocera  <hadess@hadess.net>

	* actions/acme-fb-level.c: (acme_fblevel_init):
	* actions/acme-volume-alsa.c: (acme_volume_alsa_init),
	(acme_volume_alsa_class_init):